--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 # Graphenfärbung
 ### Problembeschreibung
 Bei dem Problem der Graphenfärbung geht es darum jeder Kante eines Graphen eine Farbe zuzuweisen und dabei möglichst wenige Farben zu benutzen. Die einzige Einschränug ist, dass zwei verbundene Kanten nicht die gleiche Farbe haben dürfen.
-![Alt-Text](https://upload.wikimedia.org/wikipedia/commons/f/fd/GolombGraphProperties.svg "Bild eines gefärbten Graphens")
+![Beispiel eines gefärbten Graphen](https://upload.wikimedia.org/wikipedia/commons/f/fd/GolombGraphProperties.svg)
 (MathsPoetry [CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0)])
 
 ### Klassendiagramm:
